<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_app"
    tools:context=".ViewModel.SignIn">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:src="@drawable/notekeeper"
        android:layout_marginBottom="20dp"
        android:id="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_inicar_session"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:id="@+id/card_inicar_session"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="32dp"
            android:background="@color/background_component">


            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/email"
                android:background="@color/white"
                android:layout_marginBottom="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="Enter email"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>


            <TextView
                android:id="@+id/tvPassLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contrasenya"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/password"
                android:background="@color/white"
                android:layout_marginBottom="32dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:hint="Enter password"
                android:textSize="16sp"
                android:textColor="@color/black"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="Registrarse"
                android:id="@+id/btnRegistrar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/background_button"
                android:textColor="@color/white"
                app:cornerRadius="12dp"/>

            <TextView
                    android:id="@+id/tvMissatgeError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>